--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
 .grid {
   display: grid;
   gap: 20px;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(2, 1fr);
 }
-.foto {
+.titulo {
   grid-column: 1/-1;
+}
+.info {
+  display: grid;
+  place-items: start;
+  place-self: start;
+  gap: 20px;
 }
 
-.descricao {
-  grid-column: 1/-1;
-}
-.comprar {
-  grid-column: 1/-1;
-}
 /* Estilos Gerais */
 body {
   font-family: arial;
